<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CityFragment">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        app:mt_hint="@string/hint_cityName"
        app:mt_speechMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/weather_panel"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            app:contentPadding="18dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/cardview_background"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtCityName"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dummy_cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgWeather"
                        android:src="@mipmap/ic_launcher"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:id="@+id/txtTemperature"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/dummy_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtDescription"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dummy_cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtDateTime"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dummy_cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TableLayout
                    android:background="@drawable/border"
                    android:layout_marginTop="10dp"
                    android:stretchColumns="*"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtWeatherDescription"
                            android:layout_column="1"
                            android:text="@string/dummy_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtWind"
                            android:layout_column="1"
                            android:text="@string/dummy_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtPressure"
                            android:layout_column="1"
                            android:text="@string/dummy_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtHumidity"
                            android:layout_column="1"
                            android:text="@string/dummy_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtSunrise"
                            android:layout_column="1"
                            android:text="@string/dummy_sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtSunset"
                            android:layout_column="1"
                            android:text="@string/dummy_sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:background="@drawable/cell"
                            android:text="@string/hint_geoCoords"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:id="@+id/txtGeoCoord"
                            android:layout_column="1"
                            android:text="@string/dummy_geoCoords"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/loading"
            android:visibility="visible"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>



</LinearLayout>