<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:padding="16dp"
    tools:context=".Fragments.ForecastFragment">

    <LinearLayout
        android:id="@+id/mainInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_cityName"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGeoCoord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_coords"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="italic" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainInfo"
        android:layout_marginTop="20dp">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>