<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_background"
    app:cardElevation="4dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDate"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/dummy_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgWeather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/txtTemperature"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/dummy_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtDescription"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:text="@string/dummy_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>